--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,60 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777;
-  background: url("../images/concrete_seamless.png");
+  background-image: url("../images/bg3.jpg");
+  background-repeat: repeat-y;
+  background-size: 1900px;
+  margin: 3% 18% 10% 18%;;
 }
 
 
 .form-group {
 	margin: 2%;
+}
+
+
+.card-body,h4 {
+	color: #5a2d0c;
+	text-shadow: 2px 2px 15px #000000;
+}
+
+h3 {
+	color:  #5a2d0c;
+	text-shadow: 2px 2px 4px #000000;
+	font-family: 'Love Ya Like A Sister', cursive;
+	font-size: 28px;
+}
+.img-text {
+    position: absolute;
+    bottom: 8px;
+	left: 24px;
+}
+
+h2 {
+	color: white;
+    text-shadow: 2px 2px 4px #000000;
+    font-family: 'Homemade Apple', cursive;
+}
+
+h4 {
+	font-family: 'Amatic SC', cursive;
+	font-weight: bold;
+	font-size: 30px;
+}
+h1{
+	font-family: 'Homemade Apple', cursive;
+	font-size:50px;
+}
+.navbar-brand {
+	color: #2d1606;
+	font-family: 'Amatic SC', cursive;
+	font-weight: bold;
+	font-size:26px;
+}
+.well {
+	background-color: #baaea1;
+	font-size: 20px;
+}
+p {
+	color: #5a2d0c;
 }
