--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,23 +2,46 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
-  color: #777;
-<<<<<<< Updated upstream
+  color: #000;
+
   background-image: url("../images/bg3.jpg");
   background-repeat: repeat-y;
   background-size: 1900px;
   margin: 3% 18% 10% 18%;;
-=======
-  /* background: url("../images/concrete_seamless.png"); */
->>>>>>> Stashed changes
+
+   background: url("../images/family_layout.jpg");
+	 height: 100%;
+	 
+	 background-position: static;
+	background-repeat: no-repeat;
+	background-size: cover;
+	/*background-attachment: fixed;*/
+	z-index: -1;
+
+
 }
+
+/* makes form transparent*/
+
+	.panel.panel-default {
+	z-index: 1;
+	opacity: 0.6;
+	position: ;
+	filter: alpha(opacity=60);
+}
+/* makes text not tranparent */
+	.panel.panel-default.p {
+		margin: 5%;
+    font-weight: bold;
+    color: #000;
+	}
+
 
 
 .form-group {
 	margin: 2%;
 }
 
-<<<<<<< Updated upstream
 
 .card-body,h4 {
 	color: #5a2d0c;
@@ -65,8 +88,8 @@ h1{
 p {
 	color: #5a2d0c;
 }
-=======
+
 .btn-group {
   margin: 2% 0%;
 }
->>>>>>> Stashed changes
+
