--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,8 @@ body {
 .panel.panel-default {
     z-index: 1;
     background-image: url("../images/bg3.jpg");
-    background-repeat: repeat-x;
+    background-repeat: repeat-y;
+
 
 }
 
@@ -45,7 +46,9 @@ body {
 
 
 }
-
+#formheading {
+	border: none;
+}
 
 .form-group {
     margin: 2%;
@@ -54,6 +57,9 @@ body {
 #displayTree {
 	margin: 2%;
 
+}
+label {
+	color: #484643
 }
 .card-body,
 h4 {
@@ -67,7 +73,9 @@ h3 {
     font-family: 'Love Ya Like A Sister', cursive;
     font-size: 28px;
 }
-
+.card-body {
+	margin-left: 35px;
+}
 .img-text {
     position: absolute;
     bottom: 8px;
@@ -115,7 +123,7 @@ h1 {
 .well {
     font-size: 20px;
     background-image: url("../images/bg3.jpg");
-    background-repeat: repeat-x;
+    background-repeat: repeat-y;
     width: 80%;
 }
 #formheading {
@@ -126,11 +134,12 @@ h1 {
     background-repeat: repeat-y;	
 }
 .form-control {
-	background-color: #dcdec9;
+	background-color: #d3d3d3;
 }
 p {
     color: #5a2d0c;
 }
+/*submit button styling*/
 .btn-primary {
     color: #dcdec9;
     background-color: #635c4a;
@@ -146,7 +155,14 @@ p {
 .btn-group {
     margin: 2% 0%;
 }
-
+.btn {
+	font-size: 20px
+}
+select {
+	color: #5a2d0b;	
+	background-color: #d3d3d3;
+	font-size: 16px;
+}
 #faveVideo {
     display: block;
     margin-left: auto;
@@ -166,11 +182,12 @@ table {
 }
 
 .tree li {
-	float: left; text-align: center;
+	margin: 20px;
+	float: left; 
+	text-align: center;
 	list-style-type: none;
 	position: relative;
 	padding: 20px 5px 0 5px;
-	
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
@@ -225,12 +242,14 @@ right connector from last child*/
 }
 
 .tree li a{
+	width:120px;
+	height:150px;
 	border: 1px solid #ccc;
-	padding: 5px 10px;
+	padding: 0;
 	text-decoration: none;
 	color: #666;
-	font-family: arial, verdana, tahoma;
-	font-size: 11px;
+	font-family: 'Homemade Apple', cursive;
+	font-size: 18px;
 	display: inline-block;
 	background: lightgrey;
 	border-radius: 5px;
